--- a/ansible/playbooks/webservers.yml
+++ b/ansible/playbooks/webservers.yml
@@ -1,31 +1,27 @@
----
-- name: Configure webserver with nginx and tls
+- name: Configure webserver with nginx
   hosts: webservers
   become: True
   vars:
-    key_file: /etc/nginx/ssl/nginx.key
-    cert_file: /etc/nginx/ssl/nginx.crt
+    tls_dir: /etc/nginx/ssl/
+    key_file: nginx.key
+    cert_file: nginx.crt
     conf_file: /etc/nginx/sites-available/default
-    server_name: localhost
   tasks:
-    - name: Install nginx
-      apt: name=nginx update_cache=yes cache_valid_time=3600
-    - name: create directories for TLS certificates
-      file: path=/etc/nginx/ssl state=directory
-    - name: copy TLS key
-      copy: src=files/nginx.key dest={{ key_file }} owner=root mode=0600
-      notify: restart nginx
-    - name: copy TLS certificate
-      copy: src=files/nginx.crt dest={{ cert_file }}
-      notify: restart nginx
+    - name: install nginx
+      package: name=nginx update_cache=yes
+
     - name: copy nginx config file
-      template: src=templates/nginx.conf.j2 dest={{ conf_file }}
-      notify: restart nginx
+      copy: src=nginx.conf dest=/etc/nginx/sites-available/default
+    
     - name: enable configuration
-      file: dest=/etc/nginx/sites-enabled/default src={{ conf_file }} state=link
-      notify: restart nginx
+      file: >
+        dest=/etc/nginx/sites-enabled/default
+        src=/etc/nginx/sites-available/default
+        state=link
+
     - name: copy index.html
-      template: src=templates/index.html.j2 dest=/usr/share/nginx/html/index.html mode=0644
-  handlers:
+      template: src=index.html.j2 dest=/usr/share/nginx/html/index.html
+
+
     - name: restart nginx
       service: name=nginx state=restarted
